# GStex

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
nerfstudio/cameras/: camera_paths.py  camera_utils.py  cameras.py
nerfstudio/configs/: dataparser_configs.py  experiment_config.py  gstex_configs.py  method_configs.py
nerfstudio/data/datamanagers/: full_images_datamanager.py
nerfstudio/data/dataparsers/: nerfstudio_dataparser.py
nerfstudio/engine/: trainer.py
nerfstudio/models/: base_model.py  gstex.py  jagged_texture.py
nerfstudio/pipelines/: base_pipeline.py
nerfstudio/scripts/: eval.py  exporter.py  render.py
nerfstudio/scripts/viewer/: run_viewer.py  sync_viser_message_defs.py
nerfstudio/utils/: decorators.py  eval_utils.py  printing.py  rotations.py  timer.py
nerfstudio/viewer/: render_state_machine.py  utils.py  viewer.py
scripts/: blender_lod.py  blender_nvs.py  dtu_lod.py  dtu_nvs.py  utils.py
